fixed bug, only 1 scan can run at the time

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -21,7 +21,7 @@
             <form action="/addIP" method="POST">
                 <div class="form-group">
                     <label for="inputIP"><b>Enter IP address</b></label>
-                    <input class="form-control" type="text" name="inputIP" id="inputIP" placeholder="IP addres"
+                    <input class="form-control" type="text" name="inputIP" id="inputIP" placeholder="IP address"
                         required>
                     <small id="ipHelp" class="form-text text-muted">Example of a valid IP address: 192.168.0.2</small>
                 </div>
