--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -12,7 +12,7 @@
 
 {% block body %}
 <!-- <h1>Success, your scan has started</h1> -->
-<h1>{{msg}}</h1>
+<h1>{{message}}</h1>
 <br>
 <h3>Progress:</h3>
 <br>
