fix to progress mix

--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -11,8 +11,13 @@
 {% endblock %}
 
 {% block body %}
-<!-- <h1>Success, your scan has started</h1> -->
 <h1>{{message}}</h1>
+<br>
+<p>
+    Please make sure you only start a scan when the previous has finished.
+    Only one scan can run at the same time.
+</p>
+<br>
 <br>
 <h3>Progress:</h3>
 <br>
