--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -5,8 +5,9 @@
 
 {% block nav %}
 <a class="nav-link active" href="/createScan">Scan device</a>
-<a class="nav-link" href="/configuration">Confgiuration</a>
+<a class="nav-link" href="/configuration">Configuration</a>
 <a class="nav-link" href="/reports">Reports</a>
+<a class="nav-link" href="/questionOverview">General questions</a>
 {% endblock %}
 
 {% block body %}
