config file added

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -76,7 +76,7 @@
                     <input class="form-control" type="text" name="inputName" id="inputName" placeholder="Devicename"
                         required>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="selectScanType"><b>Select the type of scan</b></label>
                     <select name="conf" id="conf" class="form-control" id="selectScanType">
                         <option value="daba56c8-73ec-11df-a475-002264764cea">Full and Fast</option>
@@ -84,7 +84,7 @@
                         <option value="708f25c4-7489-11df-8094-002264764cea">Full and very Deep</option>
                         <option value="74db13d6-7489-11df-91b9-002264764cea">Full and very Deep Ultimate</option>
                     </select>
-                </div>
+                </div> -->
                 {% if not IpAdressen %}
                     <button type="submit" class="btnSendScan btn btn-primary" id="btnSendScan" disabled>Send scan</button>
                 {% else %}
