--- a/flask/templates/reports.html
+++ b/flask/templates/reports.html
@@ -37,7 +37,6 @@
                                 d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
                         </svg>
                     </th>
-                    <th>Report Format</th>
                     <th>Report</th>
                     <th>Archive</th>
                 </tr>
@@ -57,14 +56,13 @@
                                 {% endfor%}
                             </select>
                         </div>
-
+                        <input class="btn btn-outline-primary" type="submit" value="Download report">
                     </td>
-                    <td><input class="btn btn-outline-primary" type="submit" value="Download"></td>
                 </form>
                 <td>
                     <form action="/downloadzip" method="POST">
                         <input type="hidden" name="report_id" value="{{task.report_id}}">
-                        <input class="btn btn-outline-primary" type="submit" value="Download">
+                        <input class="btn btn-outline-primary" type="submit" value="Download archive file">
                     </form>
                 </td>
             </tr>
