--- a/flask/templates/config.html
+++ b/flask/templates/config.html
@@ -8,20 +8,26 @@
 
 {% block body %}
 
-<!-- <div class="row">
-    <h2>IP configuration</h2>
-</div> -->
 <div class="row">
     <h3>Static configuration</h3>
 </div>
 
-<div>
-    <p>current ip address: {{ip}}</p>
-    <p>current subnetmask: {{subnet}}</p>
-</div>
 <div class="row">
     <p><i>Enter a valid IP address and a subnetmask to configure your own address staticly</i></p>
 </div>
+
+
+{% if staticSucces == True %}
+<div class="row">
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        You succesfully changed your <b>IP and Submask.</b>
+        <button type="button btn-sm" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+</div>
+{% endif %}
+
 
 <div class="row">
     <div class="column">
@@ -37,19 +43,32 @@
 </div>
 
 <div class="row">
-    <form action="/staticip" method=POST>
-        <div class="form-group">
-            <label for="ip"><b>Enter IP address</b></label>
-            <input class="form-control" type="text" name="ip" id="ip" placeholder="IP address">
-            <small id="ipHelp2" class="form-text text-muted">Example of a valid IP address: 192.168.0.2</small>
+    <div class="col-7">
+        <form action="/staticip" method=POST>
+            <div class="form-group">
+                <label for="ip"><b>Enter IP address</b></label>
+                <input class="form-control" type="text" name="ip" id="ip" placeholder="IP address" required>
+                <small id="ipHelp2" class="form-text text-muted">Example of a valid IP address: 192.168.0.2</small>
+            </div>
+            <div class="form-group">
+                <label for="subnet"><b>Configure subnet</b></label>
+                <input class="form-control" type="text" name="subnet" id="subnet" placeholder="Subnetmask" required>
+                <small id="subnetHelp" class="form-text text-muted">Example of a valid subnetmask: 255.255.0.0</small>
+            </div>
+            <button class="btn btn-primary " type="submit">Configure IP</button>
+        </form>
+    </div>
+    <div class="col-5">
+        <div class="card" style="width: 20em;">
+            <div class="card-header">
+                <h5>Current configuration</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><b>IP </b> {{ip}}</li>
+                <li class="list-group-item"><b>Subnet</b> {{subnet}}</li>
+            </ul>
         </div>
-        <div class="form-group">
-            <label for="subnet"><b>Configure subnet</b></label>
-            <input class="form-control" type="text" name="subnet" id="subnet" placeholder="Subnetmask">
-            <small id="subnetHelp" class="form-text text-muted">Example of a valid subnetmask: 255.255.0.0</small>
-        </div>
-        <button class="btn btn-primary " type="submit">Configure IP</button>
-    </form>
+    </div>
 </div>
 <br>
 <div class="row">
@@ -58,12 +77,15 @@
 <div class="row">
     <p><i>By pressing the button, you configure your own IP addres dynamicly with DHCP. </i></p>
 </div>
-{% if dhcp_success%}
-<div class="alert alert-success alert-dismissible fade show" role="success">
-    Your IP addres is now: <b>127.0.0.1</b>
-    <button type="button btn-sm" class="close" data-dismiss="success" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
+
+{% if dhcpSuccess == True %}
+<div class="row">
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        You succesfully changed your IP and Submask with <b>DHCP</b>
+        <button type="button btn-sm" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
 </div>
 {% endif %}
 
