--- a/flask/templates/reports.html
+++ b/flask/templates/reports.html
@@ -28,23 +28,23 @@
         <table class="table table-hover" id="reportTable">
             <thead class="thead-dark table-bordered">
                 <tr>
-                    <th>Select</th>
-                    <th onclick="sortTable(1)">Taskname
+                    <th onclick="sortTable(0)">Taskname
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-down-up float-right"
-                            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            fill="currentColor">
                             <path fill-rule="evenodd"
                                 d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
                         </svg>
                     </th>
-                    <th colspan="2">Report format</th>
-                    
+                    <th>Report Format</th>
+                    <th>Report</th>
+                    <th>Archive</th>
                 </tr>
             </thead>
             {% for task in tasks %}
             <tr>
                 <form action="/downloadreport" method=POST>
                     <input type="hidden" name="report_id" value="{{task.report_id}}">
-                    <td><input type="checkbox" id="select"></td>
+                    <!-- <td><input type="checkbox" id="select"></td> -->
                     <td>{{task.task_name}}</td>
                     <td>
                         <div class="dropdown">
@@ -55,17 +55,16 @@
                                 {% endfor%}
                             </select>
                         </div>
-                    
+
                     </td>
                     <td><input class="btn btn-outline-primary" type="submit" value="Download"></td>
                 </form>
                 <td>
                     <form action="/downloadzip" method="POST">
                         <input type="hidden" name="report_id" value="{{task.report_id}}">
-                        <input class="btn-outline-primary" type="submit" value="zip">
+                        <input class="btn btn-outline-primary" type="submit" value="Download">
                     </form>
                 </td>
-                
             </tr>
             {% endfor %}
         </table>
@@ -80,7 +79,7 @@
         table = document.getElementById("reportTable");
         tr = table.getElementsByTagName("tr");
         for (i = 0; i < tr.length; i++) {
-            td = tr[i].getElementsByTagName("td")[1];
+            td = tr[i].getElementsByTagName("td")[0];
             if (td) {
                 txtValue = td.textContent || td.innerText;
                 if (txtValue.toUpperCase().indexOf(filter) > -1) {
