--- a/flask/templates/config.html
+++ b/flask/templates/config.html
@@ -74,6 +74,7 @@
                 <h5>Current configuration</h5>
             </div>
             <ul class="list-group list-group-flush">
+                <li class="list-group-item"><b>NAME </b> {{int_name}}</li>
                 <li class="list-group-item"><b>IP </b> {{ip}}</li>
                 <li class="list-group-item"><b>Subnet</b> {{subnet}}</li>
             </ul>
