--- a/flask/templates/config.html
+++ b/flask/templates/config.html
@@ -74,9 +74,9 @@
                 <h5>Current configuration</h5>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><b>NAME </b> {{int_name}}</li>
-                <li class="list-group-item"><b>IP </b> {{ip}}</li>
-                <li class="list-group-item"><b>Subnet</b> {{subnet}}</li>
+                <li class="list-group-item"><b>Interface name </b> {{int_name}}</li>
+                <li class="list-group-item"><b>Interface IP address </b> {{ip}}</li>
+                <li class="list-group-item"><b>Interface Subnet</b> {{subnet}}</li>
             </ul>
         </div>
     </div>
