active hosts page, eth0 scanned

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -7,6 +7,7 @@
 <a class="nav-link active" href="/createScan">Scan device</a>
 <a class="nav-link" href="/configuration">Confgiuration</a>
 <a class="nav-link" href="/reports">Reports</a>
+<a class="nav-link" href="/activehosts">Active hosts</a>
 {% endblock %}
 
 {% block body %}
