--- a/flask/templates/config.html
+++ b/flask/templates/config.html
@@ -3,6 +3,7 @@
 <a class="nav-link " href="/createScan">Scan device</a>
 <a class="nav-link active" href="/configuration">Confgiuration</a>
 <a class="nav-link" href="/reports">Reports</a>
+<a class="nav-link" href="/activehosts">Active hosts</a>
 {% endblock %}
 
 
