--- a/flask/templates/questions.html
+++ b/flask/templates/questions.html
@@ -8,6 +8,7 @@
 <a class="nav-link " href="/createScan">Scan device</a>
 <a class="nav-link" href="/configuration">Confgiuration</a>
 <a class="nav-link" href="/reports">Reports</a>
+<a class="nav-link" href="/activehosts">Active hosts</a>
 {% endblock %}
 
 {% block body %}
