--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -13,6 +13,7 @@
 {% endblock %}
 
 {% block body %}
+<!-- shows a message to see if your scan started or if there was one running -->
 <h1>{{message}}</h1>
 <br>
 <p>
@@ -24,6 +25,7 @@
 <h3>Progress:</h3>
 <br>
 <br>
+<!-- progress % and progress bar field -->
 <h3 id="progrss">0%</h3>
 <div id="progrsss" class="progress"></div>
 <br>
