--- a/flask/templates/questionOverview.html
+++ b/flask/templates/questionOverview.html
@@ -8,6 +8,7 @@
 <a class="nav-link" href="/configuration">Configuration</a>
 <a class="nav-link" href="/reports">Reports</a>
 <a class="nav-link" href="/questionOverview">General questions</a>
+<a class="nav-link" href="/activehosts">Active hosts</a>
 {% endblock %}
 
 {% block body %}
