--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block nav %}
-<a class="nav-link active" href="/createScan">Scan device</a>
+<a class="nav-link" href="/createScan">Scan device</a>
 <a class="nav-link" href="/configuration">Configuration</a>
 <a class="nav-link" href="/reports">Reports</a>
 <a class="nav-link" href="/questionOverview">General questions</a>
