--- a/flask/templates/activehosts.html
+++ b/flask/templates/activehosts.html
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block nav %}
-<a class="nav-link " href="/createScan">Scan device</a>
+<a class="nav-link" href="/createScan">Scan device</a>
 <a class="nav-link" href="/configuration">Confgiuration</a>
 <a class="nav-link" href="/reports">Reports</a>
-<a class="nav-link" href="/activehosts">Active hosts</a>
+<a class="nav-link active" href="/activehosts">Active hosts</a>
 {% endblock %}
 
 {% block body %}
