--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Openvas Automation tool</title>
+  <title>EasyVas</title>
   {% block head %}{% endblock %}
   <!-- CSS only -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
